Adding Design Controller and Refactoring Code